<resources>
    <string name="app_name">WeThoong</string>
    <string name="tra_cuu_van_ban_phap_luat">Tra cứu nhanh</string>
    <string name="tra_cuu_muc_phat">Mức phạt</string>
    <string name="tra_cuu_bien_bao_hieu">Biển báo hiệu</string>
    <string name="tra_cuu_vach_ke_duong">Vạch kẻ đường</string>
    <string name="chung_toi_la_ai">Chúng tôi là ai?</string>
    <string name="loc_theo">Lọc theo:</string>
    <string name="muc_phat">Mức phạt</string>
    <string name="phuong_tien">Phương tiện:</string>
    <string name="tu">Từ:</string>
    <string name="den">Đến:</string>
    <string name="oto">Ô tô</string>
    <string name="xemay_moto">Xe máy, Mô tô</string>
    <string name="xechuyendung">Xe chuyên dùng</string>
    <string name="tauhoa">Tàu hoả</string>
    <string name="xedap_xethoso">Xe đạp, Xe thô sơ</string>
    <string name="dibo">Đi bộ</string>
    <string name="xong">Xong</string>
    <string name="chi_tiet">Chi tiết</string>
    <string name="tra_cuu">Tra cứu</string>
    <string name="linh_vuc">Lĩnh vực:</string>
    <string name="doi_tuong">Đối tượng:</string>
    <string name="hinh_phat_bo_sung">Hình phạt bổ sung:</string>
    <string name="bien_phap_khac_phuc">Biện pháp khắc phục:</string>
    <string name="tham_quyen">Thẩm quyền:</string>
    <string name="xem_cac_dieu_khoan_lien_quan">Xem các điều khoản liên quan</string>
    <string name="lien_quan">Liên quan</string>
    <string name="duong_bo">Đường bộ</string>
    <string name="duong_sat">Đường sắt</string>
    <string name="nguoi_dieu_khien_phuong_tien">Người điều khiển phương tiện</string>
    <string name="nguoi_duoc_cho_nguoi_ngoi_tren_xe">Người được chở (người ngồi trên xe)</string>
    <string name="may_keo_xe_chuyen_dung">Máy kéo (xe chuyên dùng)</string>
    <string name="xe_tho_so_xe_suc_vat_keo">Xe thô sơ (xe súc vật kéo)</string>
    <string name="nguoi_di_bo">Người đi bộ</string>
    <string name="canhan">Cá nhân</string>
    <string name="tochuc">Tổ chức</string>
    <string name="oto_oto_tai_ro_mooc">Ô tô (ô tô tải, rơ moóc)</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="tam_giu_phuong_tien">Tạm giữ phương tiện:</string>
    <string name="underconstruction">Tính năng này sẽ sớm ra mắt trong một ngày gần đây!</string>
    <string name="optionQC41">Quy chuẩn 41/2019</string>
    <string name="optionND46">Nghị định 100/2019</string>
    <string name="optionTT01">Thông tư 01/2016/BCA</string>
    <string name="optionLGT">Luật Giao thông Đường bộ - 2008</string>
    <string name="optionLXLVPHC">Luật Xử lý Vi phạm Hành chính - 2012</string>
    <string name="optionTT652020">Thông tư 65/2020</string>
    <string name="founderTitle">Founder</string>
    <string name="wethoongFB">https://fb.me/wethoong</string>
    <string name="wethoongFBApp">224587561051762</string>
    <string name="condonghieuluatFB">https://www.facebook.com/groups/congdonghieuluat/</string>
    <string name="condonghieuluatFBApp">2262780957320858</string>
    <string name="wethoongEmail">wethoong@gmail.com</string>
    <string name="fbTitle">F:</string>
    <string name="eTitle">E:</string>
    <string name="huongdanluat">Hướng dẫn luật</string>
    <string name="popupFilterTitle">Chọn văn bản:</string>
    <string name="bienbaoFilterTitle">Chọn hình dạng biển báo:</string>
    <string name="vachkeFilterTitle">Chọn đặc điểm của vạch kẻ đường:</string>
    <string name="chitietBienbaoFilterTitle">Chọn chi tiết trên biển báo</string>
    <string name="vitriVachkeFilterTitle">Chọn vị trí vạch kẻ đường</string>
    <string name="search_here">Search here</string>
    <string name="speech_recognizer_title">Hãy nói từ khoá bạn muốn tra cứu và bấm nút \"Xong\"</string>
    <string name="tracuu">Tra Cứu</string>
</resources>
