<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vietlh.wethoong.HomeActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toTopOf="@+id/btnChungtoilaai"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnTracuuvanbanphapluat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/normalBtnBG"
                android:text="@string/tra_cuu_van_ban_phap_luat"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnTracuumucphat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/normalBtnBG"
                android:text="@string/tra_cuu_muc_phat"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnTracuubienbaohieu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/normalBtnBG"
                android:text="@string/tra_cuu_bien_bao_hieu"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnTracuuvachkeduong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/normalBtnBG"
                android:text="@string/tra_cuu_vach_ke_duong"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnHuongdanluat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/normalBtnBG"
                android:text="@string/huongdanluat"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnChungtoilaai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginEnd="147dp"
        android:background="@android:color/transparent"
        android:minHeight="0dp"
        android:text="@string/chung_toi_la_ai"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/versionInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/versionInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="version"
        android:textAlignment="center"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
