<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="true"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent">

    <LinearLayout
        android:id="@+id/Loaivanban"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/optionQC41Section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/optionQC41Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optionQC41"
                android:layout_weight="4"/>

            <CheckBox
                android:id="@+id/optionQC41Checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/optionND46Section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/optionND46Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optionND46"
                android:layout_weight="4" />

            <CheckBox
                android:id="@+id/optionND46Checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/optionTT01Section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/optionTT01Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optionTT01"
                android:layout_weight="4" />

            <CheckBox
                android:id="@+id/optionTT01Checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/optionLGTSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/optionLGTTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optionLGT"
                android:layout_weight="4"/>

            <CheckBox
                android:id="@+id/optionLGTCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/optionLXLVPHCSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/optionLXLVPHCTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optionLXLVPHC"
                android:layout_weight="4"/>

            <CheckBox
                android:id="@+id/optionLXLVPHCCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/mucphatSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/phuongtienSectionToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/phuongtienSectionToggleTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/phuong_tien"
                style="@style/smallBoldText" />
            <Switch
                android:id="@+id/phuongtienSectionToggleSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/phuongtienLines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/phuongtienLine1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:weightSum="3">

                <Button
                    android:id="@+id/btnPhuongtienOto"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingBottom="2px"
                    android:paddingLeft="2px"
                    android:paddingRight="2px"
                    android:paddingTop="2px"
                    android:text="@string/oto" />

                <Button
                    android:id="@+id/btnPhuongtienXemay"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingBottom="2px"
                    android:paddingLeft="2px"
                    android:paddingRight="2px"
                    android:paddingTop="2px"
                    android:text="@string/xemay_moto" />

                <Button
                    android:id="@+id/btnPhuongtienXechuyendung"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingBottom="2px"
                    android:paddingLeft="2px"
                    android:paddingRight="2px"
                    android:paddingTop="2px"
                    android:text="@string/xechuyendung" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/phuongtienLine2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:weightSum="6">

                <Button
                    android:id="@+id/btnPhuongtienTauhoa"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:paddingBottom="2px"
                    android:paddingLeft="2px"
                    android:paddingRight="2px"
                    android:paddingTop="2px"
                    android:text="@string/tauhoa" />

                <Button
                    android:id="@+id/btnPhuongtienXedap"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:paddingBottom="2px"
                    android:paddingLeft="2px"
                    android:paddingRight="2px"
                    android:paddingTop="2px"
                    android:text="@string/xedap_xethoso" />

                <Button
                    android:id="@+id/btnPhuongtienDibo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:paddingBottom="2px"
                    android:paddingLeft="2px"
                    android:paddingRight="2px"
                    android:paddingTop="2px"
                    android:text="@string/dibo" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/mucphatSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/mucphatSectionToggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:id="@+id/mucphatSectionToggleTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/muc_phat"
                    style="@style/smallBoldText"/>
                <Switch
                    android:id="@+id/mucphatSectionToggleSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/mucphatSelectionTuDen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/mucphatTuSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/mucphatTuTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tu"/>
                    <Spinner
                        android:id="@+id/mucphatTuPicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="5">

                    </Spinner>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/mucphatDenSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/mucphatDenTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/den"/>
                    <Spinner
                        android:id="@+id/mucphatDenPicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="5">

                    </Spinner>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnXongSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnXong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xong" />
    </LinearLayout>
</LinearLayout>
