<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/mucphatFilterTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>
    <ScrollView
        android:id="@+id/filterPopupContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp"
        app:layout_constraintBottom_toTopOf="@id/btnXongSection"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mucphatFilterTitle">

            <LinearLayout
                android:id="@+id/mucphatSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/phuongtienSectionToggle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/phuongtienSectionToggleTitle"
                        style="@style/textTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="@string/phuong_tien" />

                    <Switch
                        android:id="@+id/phuongtienSectionToggleSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/phuongtienLines"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <LinearLayout
                        android:id="@+id/phuongtienLine1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <Button
                            android:id="@+id/btnPhuongtienOto"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="2dp"
                            android:layout_weight="1"
                            android:text="@string/oto"
                            tools:ignore="ButtonStyle,NestedWeights" />

                        <Button
                            android:id="@+id/btnPhuongtienXemay"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="2dp"
                            android:layout_weight="1"
                            android:text="@string/xemay_moto"
                            tools:ignore="ButtonStyle" />

                        <Button
                            android:id="@+id/btnPhuongtienXechuyendung"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="2dp"
                            android:layout_weight="1"
                            android:text="@string/xechuyendung"
                            tools:ignore="ButtonStyle" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/phuongtienLine2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="6">

                        <Button
                            android:id="@+id/btnPhuongtienTauhoa"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="2dp"
                            android:layout_weight="2"
                            android:text="@string/tauhoa"
                            tools:ignore="ButtonStyle,NestedWeights" />

                        <Button
                            android:id="@+id/btnPhuongtienXedap"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="2dp"
                            android:layout_weight="2"
                            android:text="@string/xedap_xethoso"
                            tools:ignore="ButtonStyle" />

                        <Button
                            android:id="@+id/btnPhuongtienDibo"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="2dp"
                            android:layout_weight="2"
                            android:text="@string/dibo"
                            tools:ignore="ButtonStyle" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mucphatSelection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/mucphatSectionToggle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/mucphatSectionToggleTitle"
                            style="@style/textTitle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:text="@string/muc_phat" />

                        <Switch
                            android:id="@+id/mucphatSectionToggleSwitch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/mucphatSelectionTuDen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/mucphatTuSection"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/mucphatTuTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/textNormal"
                                android:layout_weight="1"
                                android:text="@string/tu"
                                tools:ignore="NestedWeights" />

                            <Spinner
                                android:id="@+id/mucphatTuPicker"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="5">

                            </Spinner>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/mucphatDenSection"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/mucphatDenTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/textNormal"
                                android:layout_weight="1"
                                android:text="@string/den"
                                tools:ignore="NestedWeights" />

                            <Spinner
                                android:id="@+id/mucphatDenPicker"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="5">

                            </Spinner>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/btnXongSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterPopupContent">

        <Button
            android:id="@+id/btnXong"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/selectedBtnBG"
            android:text="@string/xong"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
